--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,11 @@
 
   --transition-duration: 250ms;
   --transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  /* Breakpoints */
+  --breakpoint-xs: 320px;
+  --breakpoint-sm: 768px;
+  --breakpoint-lg: 1158px;
 }
 
 /* Styles reset */
@@ -77,6 +82,10 @@ button {
   transition-timing-function: var(--transition-timing-function);
 }
 
+.space {
+  flex: 1;
+}
+
 .visually-hidden {
   position: absolute;
   width: 1px;
@@ -91,14 +100,24 @@ button {
 }
 
 .container {
-  width: 1158px;
+  max-width: var(--breakpoint-lg);
   padding-left: var(--container-padding);
   padding-right: var(--container-padding);
   margin: 0 auto;
 }
 
 .section {
-  padding: 120px 0;
+  padding: 96px 0;
+}
+
+@media (min-width: 1158px) {
+  .section {
+    padding: 120px 0;
+  }
+}
+
+html {
+  overflow-x: hidden;
 }
 
 body {
@@ -168,10 +187,16 @@ a {
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
-.header .menu {
-  display: flex;
+.header .container .menu {
+  display: none;
   align-items: center;
   gap: 40px;
+}
+
+@media (min-width: 768px) {
+  .header .container .menu {
+    display: flex;
+  }
 }
 
 .header .logo {
@@ -188,6 +213,19 @@ a {
   display: flex;
   align-self: center;
   justify-content: space-between;
+  padding: 16px;
+}
+
+@media (min-width: 768px) {
+  .header .container {
+    padding: 0 16px 0 16px;
+  }
+}
+
+@media (min-width: 1158px) {
+  .header .container {
+    padding: 0px;
+  }
 }
 
 .nav-link {
@@ -202,18 +240,41 @@ a {
   color: var(--color-active);
 }
 
-.address-list {
-  display: flex;
+.header .container .address-list {
+  display: none;
+  flex-direction: column;
+  gap: 12px;
   align-items: center;
-  gap: 40px;
+}
+
+@media (min-width: 768px) {
+  .header .container .address-list {
+    display: flex;
+  }
+}
+
+@media (min-width: 1158px) {
+  .header .container .address-list {
+    flex-direction: row;
+    gap: 40px;
+  }
 }
 
 .address-link {
-  padding: 24px 0;
+  padding: 0;
+  font-size: 12px;
+
   color: var(--color-address-link);
   transition-property: color;
   transition-duration: var(--transition-duration);
   transition-timing-function: var(--transition-timing-function);
+}
+
+@media (min-width: 1158px) {
+  .header .container .address-link {
+    padding: 24px 0;
+    font-size: 1rem;
+  }
 }
 
 .nav-link:hover,
@@ -251,8 +312,76 @@ a {
   background-color: var(--color-active);
 }
 
-.address {
+.header .container .address {
   font-style: normal;
+  display: flex;
+  align-items: center;
+}
+
+@media (max-width: 768px) {
+  .header .container .address {
+    margin: auto 0;
+  }
+}
+
+.btn-menu {
+  background-color: transparent;
+  border: none;
+  padding: 0;
+}
+
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: none;
+  flex-direction: column;
+  background-color: var(--white);
+  padding: 72px 24px 40px 16px;
+}
+
+.mobile-menu.is-open {
+  display: flex;
+}
+
+.mobile-menu .nav-link::after {
+  display: none;
+}
+
+.mobile-menu .menu {
+  display: flex;
+  flex-direction: column;
+  gap: 40px;
+}
+
+.mobile-menu .nav-wrap .nav-link {
+  font-size: 36px;
+  font-weight: 700;
+  padding: 0;
+}
+
+.mobile-menu .address {
+  margin-bottom: 48px;
+}
+
+.mobile-menu .address-list {
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
+}
+
+.mobile-menu .address-link {
+  /* font-family: var(--font-family); */
+  font-size: 20px;
+  font-weight: 500;
+  font-style: normal;
+  letter-spacing: 0.4px;
+}
+
+.mobile-menu .social-links {
+  justify-content: space-between;
 }
 
 .social-button a,
@@ -292,7 +421,7 @@ a {
 .studio {
   max-width: 1440px;
   margin: 0 auto;
-  padding: 188px 0;
+  padding: 72px 52px;
   background: var(--color-primary);
   background-image: linear-gradient(
       to bottom,
@@ -303,6 +432,29 @@ a {
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
+}
+
+@media (min-resolution: 2x) {
+  .studio {
+    background-image: linear-gradient(
+        to bottom,
+        rgba(46, 47, 66, 0.7),
+        rgba(46, 47, 66, 0.7)
+      ),
+      url('../images/people-office_x2.jpg');
+  }
+}
+
+@media (min-width: 768px) {
+  .studio {
+    padding: 112px 136px;
+  }
+}
+
+@media (min-width: 1158px) {
+  .studio {
+    padding: 188px 0;
+  }
 }
 
 .studio .container {
@@ -339,7 +491,7 @@ a {
 
 /* SECTION 2 STRATEGY */
 .strategy-list {
-  display: flex;
+  display: grid;
   gap: 24px;
 }
 
@@ -349,7 +501,7 @@ a {
 
 .strategy-icon-card {
   height: 112px;
-  display: flex;
+  display: none;
   align-items: center;
   justify-content: center;
   border-radius: 4px;
@@ -358,8 +510,29 @@ a {
   margin-bottom: 8px;
 }
 
+@media (min-width: 768px) {
+  .strategy-list {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (min-width: 1158px) {
+  .strategy-list {
+    display: flex;
+  }
+  .strategy-icon-card {
+    display: flex;
+  }
+}
+
 .strategy-card .title {
   margin-bottom: 8px;
+}
+
+@media (max-width: 1158px) {
+  .strategy-card .title {
+    font-size: 36px;
+  }
 }
 
 /* SECTION 3 TEAM */
@@ -372,11 +545,36 @@ a {
 }
 
 .team-list {
-  display: flex;
-  gap: 24px;
+  display: grid;
+  justify-content: center;
+  gap: 72px;
+}
+
+@media (min-width: 768px) {
+  .team-list {
+    grid-template-columns: repeat(2, 1fr);
+    row-gap: 64px;
+    column-gap: 24px;
+  }
+
+  .team-list > .team-card {
+    justify-self: end;
+  }
+
+  .team-list > .team-card:nth-child(2n) {
+    justify-self: start;
+  }
+}
+
+@media (min-width: 1158px) {
+  .team-list {
+    display: flex;
+    gap: 24px;
+  }
 }
 
 .team-card {
+  width: 264px;
   border-radius: 0px 0px 4px 4px;
   background: var(--white);
   box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08),
@@ -414,19 +612,46 @@ a {
 
 .portfolio-list {
   width: 100%;
-  display: flex;
+  display: grid;
   flex-wrap: wrap;
   column-gap: 24px;
   row-gap: 48px;
+  justify-content: center;
 }
 
 .portfolio-card {
   flex: 1;
-  flex-basis: calc(33% - 24px * 2);
+  flex-basis: 100%;
   box-shadow: transparent;
   transition-property: box-shadow;
   transition-duration: var(--transition-duration);
   transition-timing-function: var(--transition-timing-function);
+}
+
+@media (min-width: 768px) {
+  .portfolio-list {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .portfolio-list > .portfolio-card {
+    justify-self: end;
+  }
+
+  .portfolio-list > .portfolio-card:nth-child(2n) {
+    justify-self: start;
+  }
+  .portfolio-card {
+    flex-basis: calc(50% - 24px * 1);
+  }
+}
+
+@media (min-width: 1158px) {
+  .portfolio-list {
+    display: flex;
+  }
+  .portfolio-card {
+    flex-basis: calc(33% - 24px * 2);
+  }
 }
 
 .portfolio-image-wrap {
@@ -487,11 +712,10 @@ a {
 
 .footer .container {
   display: flex;
-  align-items: baseline;
-}
-
-.footer > .container > div:first-child {
-  margin-right: 120px;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  gap: 72px;
 }
 
 .footer-logo {
@@ -519,7 +743,37 @@ a {
 .social-links {
   display: flex;
   gap: 16px;
-  margin-right: 80px;
+}
+
+@media (min-width: 768px) {
+  .footer .container {
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-items: baseline;
+    text-align: left;
+  }
+
+  .footer .subscribe {
+    flex-basis: 100%;
+  }
+}
+
+@media (min-width: 1158px) {
+  .footer .container {
+    gap: unset;
+  }
+
+  .footer > .container > div:first-child {
+    margin-right: 120px;
+  }
+
+  .social-links {
+    margin-right: 80px;
+  }
+
+  .footer .subscribe {
+    flex-basis: unset;
+  }
 }
 
 .subscribe-heading {
@@ -533,8 +787,16 @@ a {
 
 .subscribe-form {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
   gap: 24px;
   align-items: end;
+}
+
+@media (min-width: 768px) {
+  .subscribe-form {
+    justify-content: left;
+  }
 }
 
 .subscribe-label {
@@ -612,7 +874,7 @@ a {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 408px;
+  width: calc(100vw - 16px * 2);
   min-height: 584px;
   border-radius: 4px;
   padding: 72px 24px 24px 24px;
@@ -622,6 +884,12 @@ a {
   transition-property: transform;
   transition-duration: var(--transition-duration);
   transition-timing-function: var(--transition-timing-function);
+}
+
+@media (min-width: 768px) {
+  .form-modal {
+    width: 480px;
+  }
 }
 
 .form-title {
@@ -775,7 +1043,8 @@ a {
   text-underline-position: from-font;
 }
 
-.form-close-button {
+.form-close-button,
+.menu-close-button {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -791,21 +1060,40 @@ a {
   transition-property: background-color, border;
 }
 
-.btn-close-icon {
+.btn-close-icon,
+.menu-close-button {
   min-width: 100%;
   transition-property: fill;
   transition-duration: var(--transition-duration);
   transition-timing-function: var(--transition-timing-function);
 }
 
+.menu-close-button {
+  min-width: unset;
+}
+
+.btn-menu {
+  display: block;
+}
+
+@media (min-width: 768px) {
+  .btn-menu {
+    display: none;
+  }
+}
+
 .form-close-button:hover,
-.form-close-button:focus {
+.form-close-button:focus,
+.menu-close-button:hover,
+.menu-close-button:focus {
   background-color: #404bbf;
   border: none;
 }
 
 .form-close-button:hover .btn-close-icon,
-.form-close-button:focus .btn-close-icon {
+.form-close-button:focus .btn-close-icon,
+.menu-close-button:hover .btn-close-icon,
+.menu-close-button:focus .btn-close-icon {
   fill: var(--white);
 }
 
